Code Review Feedback replace Lorem Ipsum with readable text add media query fix overflow-x fix containers using flexbox position grid containers update .gitignore file

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,3 @@
-
 @import "./variables";
 @import "./mixin";
 @import "./typography";
@@ -15,6 +14,10 @@
 
 .arrows {
   margin-top: 10vh;
+}
+
+.overflow {
+  overflow-x: hidden;
 }
 
 .test1 {
@@ -70,11 +73,13 @@ img {
 body {
   height: 100%;
   font-family: $font-gotham-light, $font-helvetica, $font-helvetica-light;
+  width: 100%;
 }
 
 // NAVIGATION
 nav {
   background-color: $darkColor;
+  // background-image: url(../assets/images/logo.png);
 
   .logo {
     width: 40px;
@@ -118,7 +123,11 @@ nav {
 }
 
 .hero-section {
-  background-color: $pinkColor;
+  background: rgb(223, 48, 74);
+  background: linear-gradient(270deg, rgba(231, 45, 73, 0.404) 0%, rgba(197, 39, 63, 0.804) 25%, rgba(243, 21, 55, 0.802) 75%, rgba(221, 32, 60, 0.633) 92%), url("../assets/images/logo.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
   height: 50vh;
   justify-content: center;
 }
@@ -266,7 +275,7 @@ select {
 
 .card {
   transition: 0.4s ease-out;
-  //   box-shadow: 7px 10px rgba(black, 0.2);
+  box-shadow: 7px 10px #d1cece;
 }
 
 .crafts {
@@ -363,7 +372,7 @@ footer {
 }
 
 .aside-section {
-  margin-left: 50px;
+  margin-left: 30px;
 }
 
 .material-checkbox {
@@ -377,7 +386,7 @@ footer {
 }
 
 .carving-image {
-  width: 230px;
+  width: 210px;
   height: 210px;
 }
 
@@ -402,4 +411,16 @@ footer {
   @include flex();
 
   align-items: flex-end;
+}
+
+// MEDIA-QUERIES
+
+@media only screen and (max-width: 768px) {
+  .hero-section {
+    height: 60vh;
+  }
+
+  .mzalendo {
+    margin-top: 20px;
+  }
 }
